add locators and close connection and driver